--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases course work template",
-  "repository": "https://github.com/neliudochka/dbuildery",
-  "author": "Liudmyla Gorbunova <gorbunova.milasha@gmail.com>",
+  "repository": "https://github.com/MytsV/dbuildery",
+  "author": "Victoria Myts <mytsvictoria@gmail.com>",
   "license": "ECL 2.0",
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
