--- a/src/js/package.json
+++ b/src/js/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/MytsV/dbuildery-course-work/issues"
   },
-  "homepage": "https://github.com/MytsV/dbuildery-course-work#readme"
+  "homepage": "https://github.com/MytsV/dbuildery-course-work#readme",
+  "dependencies": {
+    "mysql2": "^2.3.3"
+  }
 }
