--- a/src/js/package.json
+++ b/src/js/package.json
@@ -2,9 +2,9 @@
   "name": "dbuildery-course-work-myts",
   "version": "1.0.0",
   "description": "My DBs course work",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MytsV/dbuildery-course-work#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "mysql2": "^2.3.3"
   }
 }
