--- a/src/js/package.json
+++ b/src/js/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MytsV/dbuildery-course-work#readme",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3"
   }
