--- a/src/js/package.json
+++ b/src/js/package.json
@@ -20,5 +20,9 @@
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
