fixed name in package.json for publishing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dbuildery",
+  "name": "dbuildery-course-work",
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases course work template",
